--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "phpunit/phpunit": "~5.0",
         "mockery/mockery": "~0.9",
         "orchestra/testbench": "3.4.*",
-        "laravel/laravel": "~5.4"
+        "laravel/laravel": "~5.4",
+        "intervention/image": "^2.3"
     },
     "autoload": {
         "psr-4": {
